ANode/test/data/SMSHOME2/good/ecflow_495.ecf
%include <a.h>
%include <b.h>
%include <c.h>
%include <b.h>
