ANode/test/data/SMSHOME2/bad/bad13.ecf
# test missnamed include
%includeblahblah <good_head.h>
%includeblah <good_tail.h>
